--- a/src/app/global-header/global-header.component.scss
+++ b/src/app/global-header/global-header.component.scss
@@ -1,8 +1,22 @@
 @import '../../styles/globals';
 
-$background-color: color( grey );
+$background-color: color( blue );
+@debug $background-color;
 
 :host {
   background-color: $background-color;
+  color: white;
   display: block;
+  height: 150px;
+  padding: 20px;
+}
+
+:host .logo {
+  animation: logo-spin infinite 3s ease-in-out;
+  height: 80px;
+}
+
+@keyframes logo-spin {
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(360deg); }
 }
