--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-global-header></app-global-header>
+<app-layout>
+  <router-outlet></router-outlet>
+</app-layout>
 
-<button type="button">SEARCH</button>
