search by query implemented

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
-<div class="Home">
-  <h2 class="Home-title">Home</h2>
-  <hr />
-  <div class="Home-container">
-    <a class="Home-link" routerLink="s">Search ></a>
+<div>
+  <app-searchbar></app-searchbar>
+
+  <div class="Home">
+    <h2 class="Home-title">Home</h2>
+    <hr />
+    <div class="Home-container">
+
+    </div>
   </div>
 </div>
